Added requested amount and run ktlint

--- a/common/src/main/res/layout/view_address.xml
+++ b/common/src/main/res/layout/view_address.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="26dp"
+        android:gravity="center_vertical"
         android:includeFontPadding="false"
         android:textColor="@color/white_64"
         tools:text="RTTI-5220" />
