Connect data and ui for referendum details

--- a/common/src/main/res/layout/view_address.xml
+++ b/common/src/main/res/layout/view_address.xml
@@ -15,6 +15,8 @@
 
     <TextView
         android:id="@+id/addressValue"
+        android:singleLine="true"
+        android:ellipsize="middle"
         style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
