--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -114,7 +114,11 @@
     <declare-styleable name="PlaceholderView">
         <attr name="android:text" />
         <attr name="image" format="color|reference" />
-        <attr name="showBackground" format="boolean" />
+        <attr name="placeholderBackgroundStyle" format="enum">
+            <enum name="dark" value="0" />
+            <enum name="light" value="1" />
+            <enum name="no_background" value="2" />
+        </attr>
     </declare-styleable>
 
     <declare-styleable name="TitleImageContentSectionView">
