--- a/feature-crowdloan-impl/src/main/res/layout/fragment_my_contributions.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_my_contributions.xml
@@ -58,6 +58,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/myContributionsToolbar"
         app:layout_constraintVertical_bias="0.4"
-        app:showBackground="false" />
+        app:placeholderBackgroundStyle="no_background"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
