--- a/feature-staking-impl/src/main/res/layout/fragment_search_custom_validators.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_search_custom_validators.xml
@@ -20,7 +20,6 @@
     <io.novafoundation.nova.common.view.SearchView
         android:id="@+id/searchCustomValidatorsInput"
         android:layout_width="0dp"
-        app:icon="@drawable/ic_search"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="16dp"
@@ -28,6 +27,7 @@
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
         android:hint="@string/search_recipient_hint"
+        app:icon="@drawable/ic_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchCustomValidatorsToolbar" />
@@ -94,7 +94,7 @@
         android:id="@+id/searchCustomValidatorsPlaceholder"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:showBackground="false"
+        app:placeholderBackgroundStyle="no_background"
         app:image="@drawable/ic_placeholder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
