--- a/feature-governance-impl/src/main/res/layout/fragment_referendum_full_details.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_referendum_full_details.xml
@@ -149,6 +149,7 @@
                 android:layout_marginTop="12dp"
                 android:padding="12dp"
                 android:textColor="@color/white"
+                android:textIsSelectable="true"
                 tools:background="@color/white_8" />
 
         </LinearLayout>
