Feature/governance referendum description (#503)
* Referendum description

* Changed title

* Markdown description fix

--- a/app/src/main/res/navigation/referendum_details_graph.xml
+++ b/app/src/main/res/navigation/referendum_details_graph.xml
@@ -20,6 +20,14 @@
             app:popExitAnim="@anim/fragment_close_exit" />
 
         <action
+            android:id="@+id/action_referendumDetailsFragment_to_referendumDescription"
+            app:destination="@id/referendumDescription"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
             android:id="@+id/action_referendumDetailsFragment_to_referendumFullDetailsFragment"
             app:destination="@id/referendumFullDetailsFragment"
             app:enterAnim="@anim/fragment_open_enter"
@@ -40,5 +48,11 @@
         android:name="io.novafoundation.nova.feature_dapp_impl.presentation.browser.main.DAppBrowserFragment"
         android:label="DAppBrowserFragment"
         tools:layout="@layout/fragment_dapp_browser" />
+
+    <fragment
+        android:id="@+id/referendumDescription"
+        android:name="io.novafoundation.nova.feature_governance_impl.presentation.referenda.description.ReferendumDescriptionFragment"
+        android:label="ReferendumDescriptionFragment"
+        tools:layout="@layout/fragment_referendum_description" />
 
 </navigation>
