Implement voters screen

--- a/app/src/main/res/navigation/referendum_details_graph.xml
+++ b/app/src/main/res/navigation/referendum_details_graph.xml
@@ -35,6 +35,13 @@
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
 
+        <action
+            android:id="@+id/action_referendumDetailsFragment_to_referendumVotersFragment"
+            app:destination="@id/referendumVoters"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
 
     <fragment
@@ -54,5 +61,11 @@
         android:name="io.novafoundation.nova.feature_governance_impl.presentation.referenda.description.ReferendumDescriptionFragment"
         android:label="ReferendumDescriptionFragment"
         tools:layout="@layout/fragment_referendum_description" />
+
+    <fragment
+        android:id="@+id/referendumVoters"
+        android:name="io.novafoundation.nova.feature_governance_impl.presentation.referenda.voters.ReferendumVotersFragment"
+        android:label="ReferendumVotersFragment"
+        tools:layout="@layout/fragment_referendum_voters" />
 
 </navigation>
