--- a/app/src/main/res/navigation/referendum_details_graph.xml
+++ b/app/src/main/res/navigation/referendum_details_graph.xml
@@ -35,6 +35,14 @@
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
 
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_referendumDetailsFragment_to_setupVoteReferendumFragment"
+            app:destination="@id/setupVoteReferendumFragment" />
+
     </fragment>
 
     <fragment
@@ -54,5 +62,10 @@
         android:name="io.novafoundation.nova.feature_governance_impl.presentation.referenda.description.ReferendumDescriptionFragment"
         android:label="ReferendumDescriptionFragment"
         tools:layout="@layout/fragment_referendum_description" />
+
+    <fragment
+        android:id="@+id/setupVoteReferendumFragment"
+        android:name="io.novafoundation.nova.feature_governance_impl.presentation.referenda.vote.setup.SetupVoteReferendumFragment"
+        android:label="SetupVoteReferendumFragment" />
 
 </navigation>
